Bug 1645246 - add error reporting when fluent overwrites child elements (rather than just text), r=zbraniecki

Differential Revision: https://phabricator.services.mozilla.com/D79813