dom/chrome-webidl/L10nOverlays.webidl
@@ -13,10 +13,12 @@ dictionary L10nOverlaysError {
 [ChromeOnly,
  Exposed=Window]
 namespace L10nOverlays {
-  const unsigned short ERROR_FORBIDDEN_TYPE = 1;
-  const unsigned short ERROR_NAMED_ELEMENT_MISSING = 2;
-  const unsigned short ERROR_NAMED_ELEMENT_TYPE_MISMATCH = 3;
-  const unsigned short ERROR_UNKNOWN = 4;
+  const unsigned short ERROR_UNKNOWN = 1;
+  const unsigned short ERROR_FORBIDDEN_TYPE = 2;
+  const unsigned short ERROR_NAMED_ELEMENT_MISSING = 3;
+  const unsigned short ERROR_NAMED_ELEMENT_TYPE_MISMATCH = 4;
+  const unsigned short ERROR_TRANSLATED_ELEMENT_DISCONNECTED = 5;
+  const unsigned short ERROR_TRANSLATED_ELEMENT_DISALLOWED_DOM = 6;
 
   sequence<L10nOverlaysError>? translateElement(Element element, optional L10nMessage translation = {});
 };
